@@ -1,5 +1,13 @@
 2005-11-16  Vincent Noel  <vincent.noel@gmail.com>
 
+	* log_repaint.c: (logview_update_version_bar),
+	(logview_add_new_log_lines), (log_repaint):
+	* logrtns.c: (log_open), (log_add_lines), (log_read_new_lines):
+	* logrtns.h:
+	* logview.c: (logview_select_log): Monitoring was broken, fix it.
+
+2005-11-16  Vincent Noel  <vincent.noel@gmail.com>
+
 	* logview.c (logview_init): Cleanup the main treeview creation.
 
 2005-11-16  Vincent Noel <vincent.noel@gmail.com>
